<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/labelInitialUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="@dimen/distanceSpinner"
        android:fontFamily="@font/exo_bold"
        android:text="@string/initialUnitLabel"
        android:textColor="#323232"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/familySpinner" />

    <TextView
        android:id="@+id/labelUnitFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/exo_bold"
        android:text="@string/familyLabel"
        android:textColor="#323232"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelConvertTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/exo_bold"
        android:text="@string/convertToLabel"
        android:textColor="#323232"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrowImg" />

    <Spinner
        android:id="@+id/familySpinner"
        android:layout_width="214dp"
        android:layout_height="38dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="@dimen/distanceLabel"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:entries="@array/unitFamilies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelUnitFamily" />

    <Spinner
        android:id="@+id/spinnerInitialUnit"
        android:layout_width="214dp"
        android:layout_height="38dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="@dimen/distanceLabel"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelInitialUnit" />

    <Spinner
        android:id="@+id/spinnerConvertTo"
        android:layout_width="214dp"
        android:layout_height="38dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="@dimen/distanceLabel"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:theme="@style/spinnerTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelConvertTo" />

    <ImageView
        android:id="@+id/arrowImg"
        android:layout_width="50dp"
        android:layout_height="27dp"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="180dp"
        android:layout_marginRight="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerInitialUnit"
        app:srcCompat="@drawable/arrow_down" />

</androidx.constraintlayout.widget.ConstraintLayout>